--- a/20230419.md
+++ b/20230419.md
@@ -2,3 +2,166 @@
 
 ---
 
+1. 비선점형 스케줄링 HRN(Highest Response-ratio Next Scheduling)의 우선순위 계산식
+   - 우선순위 = (대기시간  + 서비스시간) / 서비스시간
+   - 최고 응답시간 비율 스케쥴링
+   - 우선순위 값이 높을수록 우선
+
+2. DCL(SQL 제어어) 중 ROLLBACK에 대해 약술
+
+   - 트랜잭션의 실패로 작업(변경 사항)을 취소하고 이전 상태로 되돌리는 데이터 제어어
+   - COMMIT : 모든 작업을 정상처리했다고 확정
+   - GRANT : 특정 사용자에게 특정 작업을 수행할 권한을 부여하는 명령어
+   - REVOKE : 특정 사용자에게 부여한 특정 권한을 회수하는 명령어
+
+3. 리눅스에서 현재 디렉터리의 "a.txt"에 '사용자에게 읽기,쓰기', '그룹에게 읽기, 실행', '그 외에게 실행', 한 줄의 명령어, 아라비안 숫자로 8진수 권한을 부여하기 위한 명령어를 적어라
+
+   - chmod 751 a.txt (or ./a.txt)
+   - chmod(changeMode) 사용자|그룹|그외 a.txt
+   - 읽기 권한: 4, 쓰기 권한: 2, 실행 권한: 1
+   - 7: 읽,쓰,실(4+2+1), 6:읽,쓰(4+2), ...
+
+4. SOLID 원칙
+
+   - Single Responsibility Principle(SRP; 단일 책임 원칙): 소프트웨어의 컴포넌트는 단 하나의 책임만을 가져야 한다.
+   - Open Close Principles(OCP; 개방 폐쇄 원칙): 확장에 대해선 열려 있어야 하고 수정에 대해서는 닫혀 있어야 한다.
+   - Liskov Substitution Principle(LSP; 리츠코프 치환 원칙): 자식 클래스는 부모클래스에서 가능한 행위를 수행할 수 있어야 한다.
+   - Interface Segregation Principle(ISP; 인터페이스 분리의 원칙): 하나의 일반적인 인터페이스 보단 여러 개의 구체적인 인터페이스가 낫다.
+   - Dependency Inversion Principle(DIP; 의존관계 역전 원칙): 의존 관계를 맺을 때, 변화하기 쉬운 것 보단 변화하기 어려운 것에 의존해야한다.
+
+5. RAID 단계
+
+   - 버려
+
+6. 통합 테스트
+
+   - 상향식 통합 테스트: 상위 모듈이 없으므로, 상위 모듈 역할을 하는 **테스트 드라이버**를 이용ㅎㄴ다.
+   - 하향식 통합 테스트: 하위 모듈이 없으므로, 하위 모듈 역할을 하는 **테스트 스텁**을 이용한다.
+
+7. 보안 공격
+
+   - 세션 하이재킹: 세션 관리 취약점을 이용한 공격기법. 정상적 연결을 RST 패킷을 통해 종료시킨 후 재연결 시 희생자가 아닌 공격자에게 연결
+   - 워터링 홀 공격: APT 공격에서 주로 쓰인다. 공격 대상이 방문할 가능성이 있는 합법적 웹 사이트를 미리 감염시킨 뒤, 잠복 후 방문 시 악성코드 설치
+
+8. IP 주소 계산하기
+
+   ex) IP주소: 139.127.19.132, 서브넷마스크: 255.255.255.192 일 때,
+
+   - 네트워크 주소
+
+     일단 255 = 128+64+32+16+8+4+2+1 이다.
+
+     19 = 00010011
+
+     127 = 01111111
+
+     132 = 10000100
+
+     139 = 10001011
+
+     192 = 11000000
+
+     255 = 11111111
+
+     IP 주소는 139.127.19.132 = 10001011.01111111.00010011.10000100
+
+     서브넷마스크는 255.255.255.192 = 11111111.11111111.11111111.11000000
+
+     **네트워크 주소 = IP주소 ∧ 서브넷마스크**
+
+     10001011.01111111.00010011.10000000 = **139.127.19.128**
+
+   - 호스트 개수
+
+     서브넷마스크가 255.255.255.192 = 11111111.11111111.11111111.11000000
+
+     연속 1은 고정시킨다 -> 마지막 0 6개만 사용가능 -> 2^6 = 64개
+
+     192 이하 64개이므로 [128, 191] 사용 가능한데 128은 네트워크 주소이고 191은 브로드 캐스트 주소이므로 **62**가 정답
+
+     **호스트 개수 = 2^n - 2 (n=0의 개수)**
+
+9. 데이터 모델 구성요소
+
+   - 연산
+   - 구조
+   - 제약 조건
+     - 개체 데이터 모델에서는 연산을 이용하여 실제 데이터를 처리하는 작업에 대한 명세를 나타낸다.
+     - 논리 데이터 모델에서는 구조를 어떻게 나타낼 것인지 표현한다.
+     - 제약 조건은 데이터 무결성 유지를 위한 데이터베이스의 보편적 방법으로 릴레이션의 특정 칼럼에 설정하는 제약을 의미하여, 개체무결성과 참조무결성 등이 있다.
+
+10. LoC 기법
+
+    ex) 프로젝트 총 라인 30000, 개발자 5, 월평균 300/인 개발 소요 예상식
+
+    - (30000 / 5) / 300 = 20개월
+
+11. DB 용어
+
+    - Cardinality: 행 수
+    - Degree: 칼럼 수
+
+12. DB 회복 기법
+
+    - 로그 기반 회복 기법
+      - 지연갱신 회복 기법(Deferred Update)
+        - 트랜잭션의 부분 완료 상태에선 변경 내용을 로그 파일에만 저장
+        - 커밋이 발생하기 전까지 데이터베이스에 기록하지 않음
+        - 중간에 장애가 생겨도 DB에 기록되지 않았으므로 UNDO가 필요 없음
+      - 즉시갱신 회복 기법(Immediate Update)
+        - 트랜잭션 수행 도중에도 변경 내용을 즉시 데이터베이스에 기록.
+        - 커밋 발생 이전의 갱신은 원자성이 보장되지 않는 미완료 갱신이므로 장애 발생 시 UNDO 필요
+    - 검사점 회복 기법(Checkpoint Recovery)
+      - 장애 발생 시 검사점 이전에 처리된 트랜잭션은 회복에서 제외한다.
+      - 검사점 이후에 처리된 트랜잭션은 회복 작업 수행
+    - 그림자 페이징 회복 기법(Shadow Paging Recovery)
+    - 미디어 회복 기법(Media Recovery)
+      - 물리장치에 덤프
+    - ARIES 회복 기법
+
+13. EAI 유형
+
+    - 메세지 버스
+    - 하이브리드
+    - 포인트 투 포인트
+    - 허브 앤 스포크
+
+14. OSI 7계층
+
+    - 물리 - 기계적, 전기적 특성. X.21, 리피터, 허브
+    - 데이터 링크 - 흐름 제어, 오류 검출과 회복, HDLC, MAC, 랜카드, 브리지, 스위치
+    - 네트워크 -  경로 설정(Routing), 트래픽 제어, 패킷, X.25, IP, 라우터
+    - 전송 - 다중화, 오류 제어, 흐름 제어, TCP, UDP, 게이트웨이
+    - 세션 - 송수신 측 간의  관련성을 유지, 대화 제어
+    - 표현 - 데이터 암호화, 데이터 압축, 형식 변환
+    - 응용 - 파일 전송, 전자 사서함(메일), 정보 교환, 가상 터미널
+      - 데이터 링크는 노드 사이의 흐름과 오류 제어
+      - 전송은 단말기 사이의 흐름과 오류 제어
+
+15. 정규형
+
+    - 1NF: 도메인이 원자값
+    - 2NF: 부분적 함수 종속 제거
+    - 3NF: 이행적 함수 종속 제거
+    - BCNF: 결정자들 중에서 후보키 아니라면 싹다 제거
+    - 4NF: 다치 종속 제거
+    - 5NF: 조인 종속성 이용
+
+16. 결합도(Coupling) 강한순서
+
+    - 내용결합도: 다른 모듈 내부 변수
+    - 공통결합도: 전역변수
+    - 외부결합도: 외부 데이터포맷이나 프로토콜 사용
+    - 제어결합도: **'제어'** 들어가면 Control Coupling
+    - 스탬프결합도: 배열, 객체, 구조등이 인터페이스로 전달
+    - 자료결합도: 파라미터만으로 상호작용
+
+17. 응집도
+
+    - 기능적: 모든 기능 단일목적
+    - 순차적: 앞모듈 출력이 뒷모듈 입력
+    - 통신적: 같은 입출력
+    - 절차적: 순차적 실행
+    - 시간적: 특정시간에 처리
+    - 논리적: 비슷한 성격의 요소는 한 모듈에서 처리
+    - 우연적: x
